cluster-rook/minio/object-store.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-minio
---
apiVersion: v1
kind: Service
metadata:
  name: minio-my-store
  namespace: rook-minio
spec:
  type: NodePort
  ports:
    - port: 9000
  selector:
    app: minio
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio-my-store 
  namespace: rook-minio
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "minio-my-store"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
      - minio-my-store.stg.showks.cloudnativedays.jp
      secretName: default/tls-certificate
  rules:
  - host: minio-my-store.stg.showks.cloudnativedays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: minio-my-store 
          servicePort: 9000
